--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,10 +8,11 @@ os: linux
 phases:
   install:
     commands:
-      #- sudo apt-get update
+      - sudo apt-get update
+      - sudo apt install zip -y
+      - zip dbr-aws-infra.zip $CODEBUILD_SRC_DIR
       - ls -ltr
-      - pwd
-      - aws s3 cp --recursive "$CODEBUILD_SRC_DIR" s3://dbr-artifact
+      - aws s3 cp --recursive dbr-aws-infra.zip s3://dbr-artifact
 # artifacts:
 #   type: zip
 #   files:
