--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - sudo apt install zip -y
       - zip -r dbr-aws-infra.zip $CODEBUILD_SRC_DIR
       - ls -ltr
-      - aws s3 cp -r ./dbr-aws-infra.zip s3://dbr-artifact
+      - aws s3 cp --recursive ./dbr-aws-infra.zip s3://dbr-artifact
 # artifacts:
 #   type: zip
 #   files:
