--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,12 @@ os: linux
 phases:
   install:
     commands:
-      - sudo apt-get update
-      - sudo apt install zip -y
-      - zip -r dbr-aws-infra.zip $CODEBUILD_SRC_DIR
-      - ls -ltr
-      - aws s3 cp --recursive ./dbr-aws-infra.zip s3://dbr-artifact
-# artifacts:
-#   type: zip
-#   files:
-#     - '~/dbr-aws-infra'
+      # - sudo apt-get update
+      # - sudo apt install zip -y
+      # - zip -r dbr-aws-infra.zip $CODEBUILD_SRC_DIR
+      # - ls -ltr
+      # - aws s3 cp --recursive ./dbr-aws-infra.zip s3://dbr-artifact
+artifacts:
+  type: zip
+  files:
+    - '.'
