--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       # - sudo apt-get update
       # - sudo apt install zip -y
       # - zip -r dbr-aws-infra.zip $CODEBUILD_SRC_DIR
-      # - ls -ltr
+       - ls -ltr
       # - aws s3 cp --recursive ./dbr-aws-infra.zip s3://dbr-artifact
 artifacts:
   type: zip
