--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ os: linux
 #     destination: /var/www/html/WordPress
 hooks:
   BeforeInstall:
-    - location: scripts/terra-workspace.sh
+    - location: /scripts/test.sh
       timeout: 300
       runas: root
