--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
-# files:
-#   - source: /
-#     destination: /var/www/html/WordPress
+files:
+  - source: /
+    destination: /
 hooks:
   BeforeInstall:
     - location: /scripts/workspace.sh
