--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,10 @@
 version: 0.0
 os: linux
-files:
-  - source: /
-    destination: /opt/iac
+# files:
+#   - source: /
+#     destination: /opt/iac
 hooks:
   AfterInstall:
-    - location: scripts/workspace.sh
+    - location: terra.sh
       timeout: 300
       runas: root
